# Linux_Dev_2025

./: .gitignore  README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  fun.c  prog.c
03_Text/: input.txt  randomize.sh
04_Debugging/: Makefile  range.c  test1.gdb  test1.ref  test2.gdb  test2.ref
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  libfail.c  libprotect.c  move.c
06_Tracing/tests/: run_all_tests.sh  test_basic.sh  test_protect.sh  test_strace_or_preload.sh
06_Tracing/tests/logs/: basic.txt  inject.txt  protect.txt
07_Environmental/: .gitignore  Readme.md  autogen.sh  configure.ac
07_Environmental/src/: Makefile.am  rhasher.c
07_Environmental/tests/: Makefile.am  test_rhasher.sh
08_I18n/: CMakeLists.txt  run.sh
08_I18n/po/: CMakeLists.txt  ru.po
08_I18n/src/: guess.c
09_PatchDiff/: Makefile  maze.c
09_PatchDiff/patches/: 0001-size.patch  0002-symbols.patch  0003-seed.patch
10_LibTesting/: .gitignore  clean.sh  configure.ac  run.sh
10_LibTesting/src/: Makefile.am  gmb.c  gmb.h
10_LibTesting/src/.deps/: gmb.Plo
10_LibTesting/src/.libs/: libgmb.la
10_LibTesting/tests/: Makefile.am  test_gmb.c
10_LibTesting/tests/.deps/: test_gmb.Po
11_Documenting/: Doxyfile  Makefile
11_Documenting/doc/: number-game.6
11_Documenting/po/: ru.po
11_Documenting/scripts/: build.sh
11_Documenting/src/: number_game.c
12_InstallPackaging/: INSTALL  Makefile.am  README.md  clean.sh  configure.ac  number-game.sh  run.sh
12_InstallPackaging/doc/: Doxyfile  mainpage.md  usage.md
12_InstallPackaging/po/: ru.po
12_InstallPackaging/scripts/: build.sh
12_InstallPackaging/src/: Makefile.am  number_game.c  roman.c  roman.h
12_InstallPackaging/tests/: Makefile.am  test_number_game.c
